manifests/06-routes/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: inventory-demo
  namespace: inventory-demo
  labels:
    app: frontend
    component: ui
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    haproxy.router.openshift.io/timeout: "60s"
spec:
  to:
    kind: Service
    name: frontend-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
